--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,4 +14,16 @@
     <LangVersion>13</LangVersion>
     <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <AvaloniaVersion>11.3.8</AvaloniaVersion>
+    <AvaloniaBuildFramework>net8.0</AvaloniaBuildFramework>
+    <AvaloniaRootDir>..\..\..\av_main</AvaloniaRootDir>
+    <AvaloniaNativeBuildDir>$(AvaloniaRootDir)\packages\Avalonia\bin</AvaloniaNativeBuildDir>
+    <AvaloniaMarkupBuildDir>$(AvaloniaRootDir)\src\Markup\Avalonia.Markup.Xaml.Loader\bin</AvaloniaMarkupBuildDir>
+    <AvaloniaSkiaBuildDir>$(AvaloniaRootDir)\src\Skia\Avalonia.Skia\bin</AvaloniaSkiaBuildDir>
+    <AvaloniaDataGridIncludeDir>..\..\..\Avalonia.Controls.DataGrid\artifacts\bin</AvaloniaDataGridIncludeDir>
+    <UseAvaloniaFork>true</UseAvaloniaFork>
+    <IncludeAvaloniaGenerators Condition="'$(UseAvaloniaFork)' == 'True'">true</IncludeAvaloniaGenerators>
+  </PropertyGroup>
 </Project>
